--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -25,8 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY% -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgLmMpKCzveJf1_yuA0fUzzhy0WRChvZA"
+      src="https://maps.googleapis.com/maps/api/js" 
       async
       defer
     ></script>
